--- a/template/template.yml
+++ b/template/template.yml
@@ -1,20 +1,28 @@
+version: "2"
+name: ${username}
 services:
-  ${username}:
+  slurmjupyter:
         image: jupyter
         stdin_open: true # docker run -i
         tty: true        # docker run -t
+        restart: always 
         volumes:
                 - /home/${username}:/home/${username}
                 - /opt:/opt
+                - /etc/letsencrypt/live/${website}:/cert/live/${website} #optional for SSL certificate
+                - /etc/letsencrypt/archive/${website}:/cert/archive/${website} #optional for SSL certificate
         ports:
                 - ${jupyterport}:8888
         cpus: 2
         mem_limit: 10000M
 
         entrypoint: ["/bin/bash", "-c",
-                                 "service munge start &&
+                                 "service munge start && chmod 777 -R /cert &&
                                  adduser -u ${userid} ${username} --disabled-password --gecos ' ' &&
                                  rm -rf /home/${username}/.jupyter/jupyter_server_config.json &&
                                  su - ${username} -c 'jupyter notebook --generate-config -y' &&
                                  /config_jupyter.sh ${jupyterpassword} > /home/${username}/.jupyter/jupyter_notebook_config.py &&
-                                 su - ${username} -c 'jupyter lab --ip 0.0.0.0 --allow-root --notebook-dir=/home/${username} --no-browser'"]
+                                 su - ${username} -c 'jupyter lab --ip 0.0.0.0 --allow-root --notebook-dir=/home/${username} --no-browser
+                                 --certfile=/cert/live/${website}/fullchain.pem
+                                 --keyfile=/cert/live/${website}/privkey.pem'"]
+                                 
