Modified domain name and permissios

--- a/config/slurm.conf
+++ b/config/slurm.conf
@@ -9,7 +9,7 @@
 # See the slurm.conf man page for more information.
 #
 ClusterName=compute-cluster
-SlurmctldHost=samsung-slurm-controller.colab.eee.upd.edu.ph(10.158.20.10) #hostname -s
+SlurmctldHost=samsung-slurm-controller.hpc.eee.upd.edu.ph(10.158.20.10) #hostname -s
 #ControlAddr=
 #BackupController=
 #BackupAddr=
@@ -61,6 +61,7 @@ SchedulerType=sched/backfill
 #SchedulerAuth=
 SelectType=select/cons_res
 SelectTypeParameters=CR_Core_Memory,CR_CORE_DEFAULT_DIST_BLOCK,CR_ONE_TASK_PER_CORE
+SchedulerParameters=bf_max_job_user_part=1
 #FastSchedule=1
 #PriorityType=priority/multifactor
 #PriorityDecayHalfLife=14-0
@@ -85,6 +86,7 @@ JobAcctGatherType=jobacct_gather/cgroup
 #
 AccountingStorageTRES=gres/gpu
 DebugFlags=CPU_Bind,gres
+AccountingStorageEnforce=limits
 AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost=localhost
 #AccountingStorageLoc=
@@ -95,5 +97,3 @@ AccountingStorageUser=slurm
 GresTypes=gpu
 #DefMemPerNode=64000
 #NodeName=linux1 Gres=gpu:8 CPUs=80 Sockets=2 CoresPerSocket=20 ThreadsPerCore=2 RealMemory=515896 State=UNKNOWN
-PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP
-NodeName=samsung-s1.colab.eee.upd.edu.ph Gres=gpu:1 CPUs=6 Boards=1 SocketsPerBoard=1 CoresPerSocket=6 ThreadsPerCore=1 RealMemory=22700
